--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,7 @@
     "reservation": "Reservation",
     "english": "English",
     "japanese": "日本語",
-    "slogan": "A Slice of Heaven"
+    "slogan": "Taste of Perfection"
   },
   "home": {
     "nigiri_sushi": "Nigiri Sushi",
