--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -7,7 +7,7 @@
     "reservation": "予約",
     "english": "英語",
     "japanese": "日本語",
-    "slogan": "天国の一部"
+    "slogan": "完璧な味わい"
   },
   "home": {
     "nigiri_sushi": "握り寿司",
