--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,7 +48,7 @@
         "detail": "03-1234-5678"
       },
       "footer": {
-        "title": "Sushi Doshira",
+        "title": "Sushi Symphony",
         "copyright": "Copyright © 2024 veermanikandan",
         "rights": "All Rights Reserved"
       }
