--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -47,7 +47,7 @@
         "detail": "03-1234-5678"
       },
       "footer": {
-        "title": "寿司 どしら",
+        "title": "寿司 シンフォニー",
         "copyright": "著作権 © 2024 veermanikandan",
         "rights": "全著作権所有"
       }
@@ -93,46 +93,6 @@
           ]
         },
         
-          "menu": {
-            "title": "メニュー",
-            "dishes": {
-              "title": "料理",
-              "items": [
-                { "name": "マグロの刺身", "price": "$12.99" },
-                { "name": "サーモンの刺身", "price": "$11.99" },
-                { "name": "ハマチ", "price": "$13.99" },
-                { "name": "ウナギ寿司", "price": "$4.99" },
-                { "name": "エビ寿司", "price": "$3.99" },
-                { "name": "タコ寿司", "price": "$5.99" },
-                { "name": "カリフォルニアロール", "price": "$6.99" },
-                { "name": "スパイシーツナロール", "price": "$7.99" },
-                { "name": "ドラゴンロール", "price": "$12.99" },
-                { "name": "レインボーロール", "price": "$13.99" },
-                { "name": "スパイダーロール", "price": "$11.99" },
-                { "name": "うなぎ丼", "price": "$14.99" },
-                { "name": "ちらし丼", "price": "$16.99" },
-                { "name": "鉄火丼", "price": "$15.99" }
-              ]
-            },
-            "drinks": {
-              "title": "ドリンク",
-              "items": [
-                { "name": "緑茶", "price": "$12.99" },
-                { "name": "酒", "price": "$11.99" },
-                { "name": "ビール", "price": "$13.99" },
-                { "name": "梅酒", "price": "$4.99" },
-                { "name": "ウイスキー", "price": "$3.99" },
-                { "name": "焼酎", "price": "$5.99" },
-                { "name": "梅酒", "price": "$6.99" },
-                { "name": "烏龍茶", "price": "$7.99" },
-                { "name": "オレンジジュース", "price": "$12.99" },
-                { "name": "グレープフルーツジュース", "price": "$13.99" },
-                { "name": "コーラ", "price": "$11.99" },
-                { "name": "スプライト", "price": "$14.99" },
-                { "name": "ラムネ", "price": "$16.99" },
-                { "name": "カルピス", "price": "$15.99" }
-              ]
-            },
             "reviews": {
               "title": "お客様の声",
               "customer": [
@@ -162,8 +122,7 @@
           }
         }
         
-      }
-    
+  
     
   
   
