--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,8 @@
     "reservation": "Reservation",
     "english": "English",
     "japanese": "日本語",
+    "high":"Sushi",
+    "light":"Symphony",
     "slogan": "Taste of Perfection"
   },
   "home": {
