--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -7,6 +7,8 @@
     "reservation": "予約",
     "english": "英語",
     "japanese": "日本語",
+    "high":"寿司 ",
+    "light":"シンフォニー",
     "slogan": "完璧な味わい"
   },
   "home": {
